# HHParser

./: .gitignore  README.md  config.py  entities.py  main.py  pyproject.toml  vacancy.py
src/: databasemanager.py  entities.py  filemanager.py  parser.py  vacancy.py
